installer/hack/manifests/rook/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.org/ssl-services: minio-my-store
  name: rook
  namespace: showks-system
spec:
  rules:
  - host: rook.__DOMAIN__
    http:
      paths:
      - backend:
          serviceName: minio-my-store
          servicePort: 9000
        path: /
  tls:
  - hosts:
    - rook.__DOMAIN__
    secretName: showks-system/tls-certificate
---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  annotations:
#    ingress.kubernetes.io/ssl-redirect: "false"
#    kubernetes.io/ingress.class: nginx
#    kubernetes.io/tls-acme: "true"
#    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
#    nginx.ingress.kubernetes.io/server-snippet: |
#      proxy_ssl_verify off;
#    nginx.org/ssl-services: spinnaker
#  name: rook-ceph-mgr-dashboard
#  namespace: showks-system
#spec:
#  rules:
#  - host: rook-ceph.__DOMAIN__
#    http:
#      paths:
#      - backend:
#          serviceName: rook-ceph-mgr-dashboard
#          servicePort: https-dashboard
#        path: /
#  tls:
#  - hosts:
#    - rook-ceph.__DOMAIN__
#    secretName: showks-system/tls-certificate
